--- a/sap_nonspatial_supplement.qmd
+++ b/sap_nonspatial_supplement.qmd
@@ -13,7 +13,13 @@ This document provides code for spatial to non-spatial model comparisons for Sup
 Load tidyverse library for easy data manipulation.
 
 ```{r}
-library(tidyverse)
+library(dplyr) # general data manipulation
+library(stringr) # for string manipulation
+library(purrr) # for mapping functions
+library(tidyr) # for data manipulation
+library(tibble) # for tibbles instead of dataframes
+library(readr) # for writing rds
+library(ggplot2) # for plotting
 ```
 
 ### Create Non-Spatial Model Function
