--- a/sap_timestep_supplement.qmd
+++ b/sap_timestep_supplement.qmd
@@ -14,7 +14,14 @@ First load all the necessary code for simulations, and the landscapes to simulat
 
 ```{r}
 # load code
-library(tidyverse)
+library(dplyr) # general data manipulation
+library(stringr) # for string manipulation
+library(purrr) # for mapping functions
+library(tidyr) # for data manipulation
+library(tibble) # for tibbles instead of dataframes
+library(readr) # for writing rds
+library(ggplot2) # for plotting
+library(future)
 library(furrr)
 library(ape)
 library(som.nn)
