--- a/sap_figures.qmd
+++ b/sap_figures.qmd
@@ -14,7 +14,12 @@ First, load the requisite packages, simulated results, percolated landscapes, an
 
 ```{r}
 ## load code
-library(tidyverse)
+library(dplyr) # general data manipulation
+library(purrr) # for mapping functions
+library(ggplot2) # for plotting
+library(tibble) # for tibbles instead of dataframes
+library(readr) # for writing rds
+library(ggplot2) # for plotting
 library(broom)
 
 ## load simulation result data
